- removed the imdb_trailers class from checks. As IMDB seems to no longer
  list external trailers, they will either fail. The code for the class will
  remain in the repository for now - one never knows...
+ added new method imdb::keywords_all() (to retrieve the full list). For
  compatibility, pilot:keywords_all() has been added (aliases pilot::keywords())

v1.2.0 (04.10.2009)
-------------------
+ the test pages now support a "cron-mode" passing "cron=1" at the URL, i.e.
  plain text output, and only on failures (intended for automated tests)
! movie: fixed a small initialization issue (wrong type for keywords)
! movie: episodes() returned bool false (instead of empty array) if no episodes

v1.1.6 (29.09.2009)
-------------------
+ movie: added method to retrieve keywords (thanx to Balamir for the code!)
+ movie: method cast() now also has the headshots included (thumbs and big)
* test/ directory has been missing in Makefile, and "make uninstall" left some
  files on the system
+ added version and revision info to the classes (to be shown with the test page
  results)
+ let the test page prepend "." and ".." to PHPs include_path so it runs out of
  the box

v1.1.5 (24.09.2009)
-------------------
! hopefully fixed "invalid stream resource" on some network timeouts
+ movie: added method to retrieve movie types (if specified)
! person: fixed a property missing in initialization
! movie: some methods were broken due to site changes. Fixed goofs(), trailers(),
  and trivia()
* some minor updates and changes

v1.1.4 (26.04.2009)
-------------------
+ movie: added method mpaa_hist() to include multiple ratings per country (if set)
+ methods returning a data array now have the additional element "mon" holding
  the months number (while "month" still keeps the name as it was before)
+ movie: added method prodNotes() method to get information about production in progress

v1.1.3 (26.03.2009)
-------------------